fix: Widget should have minimum width so that close button does not overlap with text in preview

--- a/app/javascript/stylesheets/_widget.scss
+++ b/app/javascript/stylesheets/_widget.scss
@@ -61,6 +61,8 @@
   opacity: 0;
   transition: all 0.3s ease-out;
   margin-bottom: 12px;
+  min-width: 280px;
+  max-width: 400px;
 
   &--animated {
     transform: translateY(0);
